// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test du composant Signature mise à jour > La fermeture de la modale de signature après erreur n'appelle pas apresSignature 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  >
    <div
      class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-apparition items-center justify-center bg-black bg-opacity-40 duration-100"
    >
      <div
        class="m-4 flex"
      >
        <div
          class="border-3 w-[34rem] max-w-full rounded-xl border-solid border-bleu-sombre bg-blanc p-5"
        >
          <h2
            class="m-0 mb-4 text-center font-medium text-bleu-sombre"
          >
            Signature des mentions
          </h2>
          <div
            class="text-center"
          >
            <div
              class="font-bold text-rouge"
            >
              ⚠ Impossible d'effectuer la signature :
            </div>
            <div
              class="text-rouge"
            >
              Erreur récupération informations
            </div>
            <button
              class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc mt-6"
              title="Fermer"
              type="button"
            >
              Fermer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test du composant Signature mise à jour > La fermeture de la modale de signature après erreur n'appelle pas apresSignature 2`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  />
</div>
`;

exports[`Test du composant Signature mise à jour > La modale de signature affiche correctement une erreur d'enregistrement du document signé 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  >
    <div
      class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-apparition items-center justify-center bg-black bg-opacity-40 duration-100"
    >
      <div
        class="m-4 flex"
      >
        <div
          class="border-3 w-[34rem] max-w-full rounded-xl border-solid border-bleu-sombre bg-blanc p-5"
        >
          <h2
            class="m-0 mb-4 text-center font-medium text-bleu-sombre"
          >
            Signature des mentions
          </h2>
          <div
            class="text-center"
          >
            <div
              class="font-bold text-rouge"
            >
              ⚠ Impossible d'effectuer la signature :
            </div>
            <div
              class="text-rouge"
            >
              Erreur lors de l'enregistrement des mentions signés
            </div>
            <button
              class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc mt-6"
              title="Fermer"
              type="button"
            >
              Fermer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test du composant Signature mise à jour > La modale de signature affiche correctement une erreur de composition du document 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  >
    <div
      class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-apparition items-center justify-center bg-black bg-opacity-40 duration-100"
    >
      <div
        class="m-4 flex"
      >
        <div
          class="border-3 w-[34rem] max-w-full rounded-xl border-solid border-bleu-sombre bg-blanc p-5"
        >
          <h2
            class="m-0 mb-4 text-center font-medium text-bleu-sombre"
          >
            Signature des mentions
          </h2>
          <div
            class="text-center"
          >
            <div
              class="font-bold text-rouge"
            >
              ⚠ Impossible d'effectuer la signature :
            </div>
            <div
              class="text-rouge"
            >
              Erreur lors de la composition du document à signer
            </div>
            <button
              class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc mt-6"
              title="Fermer"
              type="button"
            >
              Fermer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test du composant Signature mise à jour > La modale de signature affiche correctement une erreur de récupération d'information 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  >
    <div
      class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-apparition items-center justify-center bg-black bg-opacity-40 duration-100"
    >
      <div
        class="m-4 flex"
      >
        <div
          class="border-3 w-[34rem] max-w-full rounded-xl border-solid border-bleu-sombre bg-blanc p-5"
        >
          <h2
            class="m-0 mb-4 text-center font-medium text-bleu-sombre"
          >
            Signature des mentions
          </h2>
          <div
            class="text-center"
          >
            <div
              class="font-bold text-rouge"
            >
              ⚠ Impossible d'effectuer la signature :
            </div>
            <div
              class="text-rouge"
            >
              Erreur récupération informations
            </div>
            <button
              class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc mt-6"
              title="Fermer"
              type="button"
            >
              Fermer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test du composant Signature mise à jour > La modale de signature affiche correctement une erreur de signature du document 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  >
    <div
      class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-apparition items-center justify-center bg-black bg-opacity-40 duration-100"
    >
      <div
        class="m-4 flex"
      >
        <div
          class="border-3 w-[34rem] max-w-full rounded-xl border-solid border-bleu-sombre bg-blanc p-5"
        >
          <h2
            class="m-0 mb-4 text-center font-medium text-bleu-sombre"
          >
            Signature des mentions
          </h2>
          <div
            class="text-center"
          >
            <div
              class="font-bold text-rouge"
            >
              ⚠ Impossible d'effectuer la signature :
            </div>
            <div
              class="text-rouge"
            >
              Erreur signature document
            </div>
            <button
              class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc mt-6"
              title="Fermer"
              type="button"
            >
              Fermer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test du composant Signature mise à jour > La modale de signature s'ouvre correctement 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  >
    <div
      class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-apparition items-center justify-center bg-black bg-opacity-40 duration-100"
    >
      <div
        class="m-4 flex"
      >
        <div
          class="border-3 w-[34rem] max-w-full rounded-xl border-solid border-bleu-sombre bg-blanc p-5"
        >
          <h2
            class="m-0 mb-4 text-center font-medium text-bleu-sombre"
          >
            Signature des mentions
          </h2>
          <div
            class="mb-4 text-start"
          >
            Message mentions
          </div>
          <div>
            <form
              action="#"
            >
              <div
                class="flex w-full flex-col text-start"
              >
                <label
                  aria-label="aria-label-pin"
                  class="m-0 mb-1 ml-1 block w-fit text-start transition-colors text-bleu-sombre"
                  for="pin"
                >
                  Code pin
                </label>
                <div
                  class="relative flex rounded-md shadow-sm"
                >
                  <input
                    autocomplete="off"
                    class="border-1 flex flex-grow rounded border border-solid px-2 py-1  transition-colors read-only:bg-gris-clair focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-opacity-70 border-gris focus-visible:ring-bleu"
                    id="pin"
                    maxlength="100"
                    name="pin"
                    type="password"
                    value=""
                  />
                </div>
              </div>
              <div
                class="mt-12 flex flex-nowrap justify-center gap-4"
              >
                <button
                  class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-blanc text-bleu-sombre hover:text-bleu hover:border-bleu focus:text-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
                  title="Annuler"
                  type="button"
                >
                  Annuler
                </button>
                <button
                  class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
                  title="Valider"
                  type="submit"
                >
                  Valider
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test du composant Signature mise à jour > La signature se déroule correctement et appel la fonction apresSignature 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  >
    <div
      class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-apparition items-center justify-center bg-black bg-opacity-40 duration-100"
    >
      <div
        class="m-4 flex"
      >
        <div
          class="border-3 w-[34rem] max-w-full rounded-xl border-solid border-bleu-sombre bg-blanc p-5"
        >
          <h2
            class="m-0 mb-4 text-center font-medium text-bleu-sombre"
          >
            Signature des mentions
          </h2>
          <div
            class="text-center"
          >
            <div>
              Signature des mentions effectuée.
            </div>
            <button
              class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc mt-6"
              title="Fermer"
              type="button"
            >
              Fermer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test du composant Signature mise à jour > La signature se déroule correctement et appel la fonction apresSignature 2`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  />
</div>
`;

exports[`Test du composant Signature mise à jour > Le bouton est inactif si l'utilisateur ne peut pas signer 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  />
</div>
`;

exports[`Test du composant Signature mise à jour > Le bouton ne s'affiche pas si l'utilisateur n'a pas de droit signer 1`] = `
<div>
  <div
    id="conteneur-modale-signature"
  />
</div>
`;

exports[`Test du composant Signature mise à jour > Une erreur de mise à jour du statut n'affecte pas la réussite de la signature 1`] = `
<div>
  <button
    class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc"
    title="Terminer et signer"
    type="button"
  >
    Terminer et signer
  </button>
  <div
    id="conteneur-modale-signature"
  >
    <div
      class="fixed left-0 top-0 z-[1000] flex h-screen w-screen animate-apparition items-center justify-center bg-black bg-opacity-40 duration-100"
    >
      <div
        class="m-4 flex"
      >
        <div
          class="border-3 w-[34rem] max-w-full rounded-xl border-solid border-bleu-sombre bg-blanc p-5"
        >
          <h2
            class="m-0 mb-4 text-center font-medium text-bleu-sombre"
          >
            Signature des mentions
          </h2>
          <div
            class="text-center"
          >
            <div>
              Signature des mentions effectuée.
            </div>
            <button
              class="m-0 min-w-0 rounded-md border border-solid px-4 py-2 uppercase transition-colors border-bleu-sombre bg-bleu-sombre text-blanc hover:bg-bleu hover:border-bleu focus:bg-bleu focus:border-bleu focus:outline-none focus-visible:ring-2 focus-visible:ring-bleu focus-visible:ring-offset-2 disabled:bg-bleu-sombre disabled:border-gris-sombre disabled:bg-gris-sombre disabled:text-blanc mt-6"
              title="Fermer"
              type="button"
            >
              Fermer
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
